# DokiDoki_Dogido

./: .env.example  .env.example.txt  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
cue_voice/: entity_cache_manifest.json
doc/: biome.md  guardrail.md  haiku.md  mob_list.md
docs/: README.md  adapter-api.md  behavior-spec.md  boss-spec.md  bug-player-chat-observation-gaps.md  companion-maturity.md  concept.md  current-spec.md  debug-checklist.md  dialogue-design.md  environmental-hostile-spec.md  event-schema.md  haiku-architecture.md  haiku-feedback-plan.md  haiku-player-improvement-plan.md  integration-architecture.md  memory-architecture.md  mob-interaction-tone.md  mob_list.md  monster-schema.md  pillager-banner-chat-plan.md  player-chat-casual-plan.md  player-chat-sm-vs-prompt.md  player-chat-topic-overfit-plan.md  project-overview.md  py-trees-integration.md  rag.md  runtime-dependencies.md  sample-event-log-cases.md  senryu-rag-plan.md  senryu-roadmap.md  server-package-layout-proposal.md  server-reorg-and-workshop-order.md  skeleton-spec.md  sound-identity-plan.md  state-machine.md  technical-risks.md  villager-context-plan.md
dogido_server/: __main__.py  app.py  audio.py  catalog_readings.py  config.py  cues.py  dialogue_context.py  entity_voice_catalog.py  entry_catalog.py  llm.py  memory.py  memory_types.py  minecraft_ids.py  models.py  player_chat_policy.py  py_tree_policy.py  replay.py  service.py  smoke_test.py  state_machine.py  voice_input.py
entries/: minecraft_combat_items.json  minecraft_command_only_items.json  (+2 more)
tests/: test_app.py  (+24 more)
(+138 files in other folders)
